K8s/auth-api.deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: sso-demo
spec:
  selector:
    matchLabels:
      app: auth-api
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      restartPolicy: Always
      containers:
      - name: auth-api
        image: auth_api:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: api
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api-service
  namespace: sso-demo
spec:
  type: ClusterIP
  selector:
    app: auth-api
  ports:
  - name: websecure
    port: 443
    targetPort: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api-ingress
  namespace: sso-demo
  labels:
    name: auth-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "ssodemo.local.rybeau.nz"
    http:
      paths:
      - pathType: Prefix
        path: "/api/auth/"
        backend:
          service:
            name: auth-api-service
            port: 
              name: websecure
