K8s/demo-api-1.deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-1
  namespace: sso-demo
spec:
  selector:
    matchLabels:
      app: demo-api-1
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-api-1
    spec:
      restartPolicy: Always
      containers:
      - name: demo-api-1
        image: demo_api_1:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: api
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-api-1-service
  namespace: sso-demo
spec:
  type: ClusterIP
  selector:
    app: demo-api-1
  ports:
  - name: websecure
    port: 443
    targetPort: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-api-1-ingress
  namespace: sso-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
  labels:
    name: demo-api-1-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "ssodemo.local.rybeau.nz"
    http:
      paths:
      - pathType: Prefix
        path: /api/demo1/(.*)
        backend:
          service:
            name: demo-api-1-service
            port: 
              name: websecure
